Windows crashes when draging properities panel to open it #45156

Closed
opened 2015-06-23 08:50:45 +02:00 by Michael P. · 27 comments

System Information
Windows 64bit, 4096 MB
GeForce GTX 760/PCIe/SSE2, 4.5.0 NVIDIA 352.86

Blender Version
Broken: 2.75 (sub 0), branch b'master', commit date b'2015-06-19' b'14:59', hash b'c85a58a', b''

Short description of error
Windows crashes when draging properities panel to open it

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • open .blend file
  • click on the properities panel edge and drag it to open it (see attached image)
  • the Windows OS crashes and I have to reboot
  • I can reproduce the crash on my system
    windows-7-64bit-crash.jpg
    windows-7-64bit-crash.blend
**System Information** Windows 64bit, 4096 MB GeForce GTX 760/PCIe/SSE2, 4.5.0 NVIDIA 352.86 **Blender Version** Broken: 2.75 (sub 0), branch b'master', commit date b'2015-06-19' b'14:59', hash b'c85a58a', b'' **Short description of error** Windows crashes when draging properities panel to open it **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - open .blend file - click on the properities panel edge and drag it to open it (see attached image) - the Windows OS crashes and I have to reboot - I can reproduce the crash on my system ![windows-7-64bit-crash.jpg](https://archive.blender.org/developer/F196846/windows-7-64bit-crash.jpg) [windows-7-64bit-crash.blend](https://archive.blender.org/developer/F196848/windows-7-64bit-crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

#45226 was marked as duplicate of this issue

#45226 was marked as duplicate of this issue
Author
  • I can reproduce the crash with Blender 2.75 rc1 too
  • Blender 2.74 works fine
  • I can reproduce the crash with my start-up file
  • A better image of the region to drag. The fist one was to misleading.
    windows-7-64bit-crash-2.jpg
- I can reproduce the crash with Blender 2.75 rc1 too - Blender 2.74 works fine - I can reproduce the crash with my start-up file - A better image of the region to drag. The fist one was to misleading. ![windows-7-64bit-crash-2.jpg](https://archive.blender.org/developer/F196861/windows-7-64bit-crash-2.jpg)
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions
Member

I can confirm it on win7 64 bit rc1, didn't try it on rc2 tough - it completely froze my machine here (had some important docs open, hrmpf ;))

Michael, could you try it on rc2 too to make sure it has not been fixed already?

I can confirm it on win7 64 bit rc1, didn't try it on rc2 tough - it completely froze my machine here (had some important docs open, hrmpf ;)) Michael, could you try it on rc2 too to make sure it has not been fixed already?
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

please try rc2 no crash here windows 64-bit intel hd 4600

please try rc2 no crash here windows 64-bit intel hd 4600
Author

@plasmasolutions. The first test was rc2, later I tried rc1. I have win7 64bit.

@plasmasolutions. The first test was rc2, later I tried rc1. I have win7 64bit.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

We had a similar report where clicking the '+' icon caused a crash on Win (can't find atm) but it printed a "divide by 0" error to the console. @plasmasolutions, since you know how to handle a console, mind checking? ;) (maybe also use --debug-all)

We had a similar report where clicking the '+' icon caused a crash on Win (can't find atm) but it printed a "divide by 0" error to the console. @plasmasolutions, since you know how to handle a console, mind checking? ;) (maybe also use `--debug-all`)
Author

I tried to record the debug proces as followed

c:\blender\blender --debug-all > c:\debug-console-output.txt

And in the attached file is all I got until reboot. And it's not much, but maybe it helps somehow.
blender-2.75rc2-crash-debug-all.txt

I tried to record the debug proces as followed ``` c:\blender\blender --debug-all > c:\debug-console-output.txt ``` And in the attached file is all I got until reboot. And it's not much, but maybe it helps somehow. [blender-2.75rc2-crash-debug-all.txt](https://archive.blender.org/developer/F197360/blender-2.75rc2-crash-debug-all.txt)
Member

Changing back to "Normal" prio.

Note: No dev was able to recreate yet (although @plasmasolutions was - maybe we should force him to look into it? ;) ).

Changing back to "Normal" prio. Note: No dev was able to recreate yet (although @plasmasolutions was - maybe we should force him to look into it? ;) ).
Member

Hi Severin,

am in IRC in a minute - we'll talk there. And I'll boot up my windows machine right now,...let's investigate!

Hi Severin, am in IRC in a minute - we'll talk there. And I'll boot up my windows machine right now,...let's investigate!
Member

I couldn't reproduce it here..there is a chance that it's depending on the second monitor I've normally attached. Will check on Monday again.

I couldn't reproduce it here..there is a chance that it's depending on the second monitor I've normally attached. Will check on Monday again.
Author

I did some more testing:
CRASH:

  • I deleted the startup.blend file from the 2.75 preferences folder, opend Blender 2.75 r2 and draged the plus icon (like in the second screenshot) -> crash
  • I opend Blender 2.75 r2, did no changes, and saved a fresh startup.blend, then draged the plus icon -> crash

I opend the created startup.blend file in Blender 2.74, draged the icon -> crash

NO CRASH

  • I opend Blender 2.75 r2, pressed the N button to open the properites, then dragged to close and again dragged the plus icon to open it -> no crash
  • I opend Blender 2.75 r2, splited the 3d view into two 3d views, dragged both plus icons to open the properities panel -> no crash

I tested all other editors, which have a properities panel -> no crash

Here is the created startup.blend file that even crashes my Windows 7 64bit OS with Blender 2.74:
startup.blend

I also updated the Nvidia drivers to the latest Version prior to testing.

I did some more testing: CRASH: - I deleted the startup.blend file from the 2.75 preferences folder, opend Blender 2.75 r2 and draged the plus icon (like in the second screenshot) -> crash - I opend Blender 2.75 r2, did no changes, and saved a fresh startup.blend, then draged the plus icon -> crash # I opend the created startup.blend file in Blender 2.74, draged the icon -> crash NO CRASH - I opend Blender 2.75 r2, pressed the N button to open the properites, then dragged to close and again dragged the plus icon to open it -> no crash - I opend Blender 2.75 r2, splited the 3d view into two 3d views, dragged both plus icons to open the properities panel -> no crash # I tested all other editors, which have a properities panel -> no crash Here is the created startup.blend file that even crashes my Windows 7 64bit OS with Blender 2.74: [startup.blend](https://archive.blender.org/developer/F198091/startup.blend) I also updated the Nvidia drivers to the latest Version prior to testing.
Author

I forgot to mention if I do 1. or 2. from NO CRASH block, then save a startup.blend file and then open Blender 2.75 rc2 and drag the plus icon -> no crash

I forgot to mention if I do 1. or 2. from NO CRASH block, then save a startup.blend file and then open Blender 2.75 rc2 and drag the plus icon -> no crash
Member

Added subscribers: @MartijnBerger, @ThomasDinges

Added subscribers: @MartijnBerger, @ThomasDinges
Member

Still can't recreate, neither on Linux nor on my windows machine (using RC2).

It really looks like there is an issue with initializing the Properties Region, investigated a bit but hard to nail down without being able to recreate.

At this point it's crucial to find someone who is able to recreate with a development build. Otherwise I'm afraid we have to move it to BF-Unconfirmed. This seems like a Windows issue, so @MartijnBerger, @ThomasDinges, could you give it a try?

Still can't recreate, neither on Linux nor on my windows machine (using RC2). It really looks like there is an issue with initializing the Properties Region, investigated a bit but hard to nail down without being able to recreate. At this point it's crucial to find someone who is able to recreate with a development build. Otherwise I'm afraid we have to move it to BF-Unconfirmed. This seems like a Windows issue, so @MartijnBerger, @ThomasDinges, could you give it a try?
Member

Added subscriber: @yhoyhoj

Added subscriber: @yhoyhoj
Member

Has anyone actually tried with a more recent build from buildbot ? We should've checked that earlier.

Has anyone actually tried with a more recent build from [buildbot ](https://builder.blender.org/download/)? We should've checked that earlier.

Just tried with the latest build (28c34d3, not Gooseberry branch).

  • Same problem.

(And sorry for the duplicate, I couldn't find this ticket).

Just tried with the latest build (28c34d3, not Gooseberry branch). - > Same problem. (And sorry for the duplicate, I couldn't find this ticket).

This issue was referenced by 827ccc343f

This issue was referenced by 827ccc343ffca44fb66a7b2f53f15b20598f63e5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by e35a26fbef

This issue was referenced by e35a26fbef2ad3eb1c1e5e9432ca41b2a560a9e6

This issue was referenced by c706d1ab7a

This issue was referenced by c706d1ab7a8d180cf91cf4d9eb3848a58278ddef

This issue was referenced by 5f864894a4

This issue was referenced by 5f864894a4aef274b2962319ed1248a75849ff83
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45156
No description provided.