source/blender/blenloader/intern/versioning_defaults.c
@@ -127,8 +127,9 @@ void BLO_update_defaults_startup_blend(Main *bmain)
 
 					/* simple fix for 3d view properties scrollbar being not set to top */
 					if (ar->regiontype == RGN_TYPE_UI) {
-						ar->v2d.cur.ymax = ar->v2d.tot.ymax;
-						ar->v2d.cur.ymin = ar->v2d.cur.ymax - ar->winy;
+						float offset = ar->v2d.tot.ymax - ar->v2d.cur.ymax;
+						ar->v2d.cur.ymax += offset;
+						ar->v2d.cur.ymin += offset;
 					}
 				}
 			}
